@@ -91,11 +91,7 @@ static int des_cbc_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 	{
 	des_cblock *deskey = (des_cblock *)key;
 
-	if (iv != NULL)
-		memcpy(&(ctx->oiv[0]),iv,8);
-	memcpy(&(ctx->iv[0]),&(ctx->oiv[0]),8);
-	if (deskey != NULL)
-		des_set_key_unchecked(deskey,ctx->c.des_ks);
+	des_set_key_unchecked(deskey,ctx->c.des_ks);
 	return 1;
 	}
 
