@@ -113,14 +113,11 @@ static int des_ede_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 	{
 	des_cblock *deskey = (des_cblock *)key;
 
-	if (deskey != NULL)
-		{
-		des_set_key_unchecked(&deskey[0],ctx->c.des_ede.ks1);
-		des_set_key_unchecked(&deskey[1],ctx->c.des_ede.ks2);
-		memcpy( (char *)ctx->c.des_ede.ks3,
+	des_set_key_unchecked(&deskey[0],ctx->c.des_ede.ks1);
+	des_set_key_unchecked(&deskey[1],ctx->c.des_ede.ks2);
+	memcpy( (char *)ctx->c.des_ede.ks3,
 			(char *)ctx->c.des_ede.ks1,
 			sizeof(ctx->c.des_ede.ks1));
-		}
 	return 1;
 	}
 
@@ -129,12 +126,9 @@ static int des_ede3_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 	{
 	des_cblock *deskey = (des_cblock *)key;
 
-	if (deskey != NULL)
-		{
-		des_set_key_unchecked(&deskey[0],ctx->c.des_ede.ks1);
-		des_set_key_unchecked(&deskey[1],ctx->c.des_ede.ks2);
-		des_set_key_unchecked(&deskey[2],ctx->c.des_ede.ks3);
-		}
+	des_set_key_unchecked(&deskey[0],ctx->c.des_ede.ks1);
+	des_set_key_unchecked(&deskey[1],ctx->c.des_ede.ks2);
+	des_set_key_unchecked(&deskey[2],ctx->c.des_ede.ks3);
 	return 1;
 	}
 
