@@ -90,14 +90,7 @@ static int des_ofb_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 	     unsigned char *iv, int enc)
 	{
 	des_cblock *deskey = (des_cblock *)key;
-
-	ctx->num=0;
-
-	if (iv != NULL)
-		memcpy(&(ctx->oiv[0]),iv,8);
-	memcpy(&(ctx->iv[0]),&(ctx->oiv[0]),8);
-	if (deskey != NULL)
-		des_set_key_unchecked(deskey,ctx->c.des_ks);
+	des_set_key_unchecked(deskey,ctx->c.des_ks);
 	return 1;
 	}
 
