@@ -90,13 +90,7 @@ EVP_CIPHER *EVP_idea_ofb(void)
 static int idea_ofb_init_key(EVP_CIPHER_CTX *ctx, unsigned char *key,
 	     unsigned char *iv, int enc)
 	{
-	ctx->num=0;
-
-	if (iv != NULL)
-		memcpy(&(ctx->oiv[0]),iv,8);
-	memcpy(&(ctx->iv[0]),&(ctx->oiv[0]),8);
-	if (key != NULL)
-		idea_set_encrypt_key(key,&(ctx->c.idea_ks));
+	idea_set_encrypt_key(key,&(ctx->c.idea_ks));
 	return 1;
 	}
 
